k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: task-system
spec:
  replicas: 3 # Scale for high load
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3002
          resources:
            requests:
              memory: "256Mi" # at least 256mb to start
              cpu: "200m" #at least 0.2 cpu to start
            limits:
              memory: "512Mi" #kill if use more than 512mb
              cpu: "500m" #no more use than 0.5 cpu
          readinessProbe:
            httpGet:
              path: /notifications/health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /notifications/health
              port: 3002
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: task-system
spec:
  selector:
    app: notification-service
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
